--- a/src/components/Table/TablePage.module.css
+++ b/src/components/Table/TablePage.module.css
@@ -8,3 +8,8 @@
   font-weight: bold;
   color: #fff;
 }
+@media only screen and (max-width: 600px) {
+  .columnHeading {
+    font-size: 0.7rem;
+  }
+}
