--- a/src/constants/Global.css
+++ b/src/constants/Global.css
@@ -1,3 +1,42 @@
+#header {
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+  font-size: 6rem;
+  font-weight: 400;
+  letter-spacing: 2px;
+  text-align: center;
+  color: #f35626;
+  background-image: -webkit-linear-gradient(92deg, #f35626, #feab3a);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -webkit-animation: hue 10s infinite linear;
+  margin: 5rem 0 2rem 0;
+}
+
+@keyframes hue {
+  from {
+    -webkit-filter: hue-rotate(0deg);
+  }
+  to {
+    -webkit-filter: hue-rotate(-360deg);
+  }
+}
+@media (max-width: 1024px) {
+  #header {
+    font-size: 5rem;
+  }
+}
+@media (max-width: 768px) {
+  #header {
+    font-size: 3.5rem;
+  }
+}
+
+@media screen and (max-width: 414px) {
+  #header {
+    font-size: 2.7rem;
+  }
+}
+
 .cardContainer {
   width: 85% !important;
   margin: 2rem;
