--- a/src/constants/Global.css
+++ b/src/constants/Global.css
@@ -11,29 +11,12 @@
   -webkit-animation: hue 10s infinite linear;
   margin: 5rem 0 2rem 0;
 }
-
 @keyframes hue {
   from {
     -webkit-filter: hue-rotate(0deg);
   }
   to {
     -webkit-filter: hue-rotate(-360deg);
-  }
-}
-@media (max-width: 1024px) {
-  #header {
-    font-size: 5rem;
-  }
-}
-@media (max-width: 768px) {
-  #header {
-    font-size: 3.5rem;
-  }
-}
-
-@media screen and (max-width: 414px) {
-  #header {
-    font-size: 2.5rem;
   }
 }
 
@@ -120,4 +103,38 @@
 }
 #deathsUnderline {
   border-bottom: 1px groove rgba(0, 0, 0, 0.5);
+}
+
+.helplineImage {
+  width: 50%;
+  height: 80%;
+}
+
+@media (max-width: 1024px) {
+  #header {
+    font-size: 5rem;
+  }
+  .helplineImage {
+    width: 75%;
+    height: 80%;
+  }
+}
+@media (max-width: 768px) {
+  #header {
+    font-size: 3.5rem;
+  }
+  .helplineImage {
+    width: 75%;
+    height: 80%;
+  }
+}
+
+@media screen and (max-width: 414px) {
+  #header {
+    font-size: 2.5rem;
+  }
+  .helplineImage {
+    width: 85%;
+    height: 85%;
+  }
 }
