--- a/src/constants/Global.css
+++ b/src/constants/Global.css
@@ -1,6 +1,17 @@
+.logo {
+  text-align: center;
+  margin-top: 5rem;
+  width: 100%;
+}
+
+.logo-image {
+  width: 20%;
+  height: 100%;
+}
+
 #header {
   font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-  font-size: 6rem;
+  font-size: 5.3rem;
   font-weight: 400;
   letter-spacing: 2px;
   text-align: center;
@@ -9,7 +20,7 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   -webkit-animation: hue 10s infinite linear;
-  margin: 5rem 0 2rem 0;
+  margin: 3rem 0 2rem 0;
 }
 #header_2 {
   font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
@@ -118,8 +129,12 @@
 }
 
 @media (max-width: 1024px) {
+  .logo-image {
+    width: 40%;
+  }
+
   #header {
-    font-size: 5rem;
+    font-size: 4rem;
   }
   #header_2 {
     font-size: 4rem;
@@ -130,8 +145,12 @@
   }
 }
 @media (max-width: 768px) {
+  .logo-image {
+    width: 60%;
+  }
+
   #header {
-    font-size: 3.5rem;
+    font-size: 3rem;
   }
   #header_2 {
     font-size: 3rem;
@@ -143,8 +162,12 @@
 }
 
 @media screen and (max-width: 414px) {
+  .logo-image {
+    width: 70%;
+  }
+
   #header {
-    font-size: 2.5rem;
+    font-size: 2.3rem;
   }
   #header_2 {
     font-size: 2rem;
