--- a/src/constants/Global.css
+++ b/src/constants/Global.css
@@ -1,18 +1,22 @@
 .logo {
-  text-align: center;
   margin-top: 5rem;
   width: 100%;
 }
 
 .logo-image {
-  width: 20%;
-  height: 100%;
+  width: 60%;
+}
+
+.headers {
+  text-align: center;
+  margin-top: 2rem;
+  margin-left: -5rem;
 }
 
 #header {
   font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
   font-size: 5.3rem;
-  font-weight: 400;
+  font-weight: 530;
   letter-spacing: 2px;
   text-align: center;
   color: #f35626;
@@ -27,13 +31,26 @@
   font-size: 4rem;
   font-weight: 400;
   letter-spacing: 2px;
+
+  color: #f35626;
+  background-image: -webkit-linear-gradient(92deg, #f35626, #feab3a);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -webkit-animation: hue 10s infinite linear;
+  margin: 5rem 0 1rem 0;
+}
+#header_3 {
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+  font-size: 3rem;
+  font-weight: 500;
+  letter-spacing: 2px;
   text-align: center;
   color: #f35626;
   background-image: -webkit-linear-gradient(92deg, #f35626, #feab3a);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   -webkit-animation: hue 10s infinite linear;
-  margin: 5rem 0 2rem 0;
+  margin: 0 0 1rem 0;
 }
 @keyframes hue {
   from {
@@ -130,7 +147,11 @@
 
 @media (max-width: 1024px) {
   .logo-image {
-    width: 40%;
+    width: 60%;
+  }
+
+  .headers {
+    margin-left: -2rem;
   }
 
   #header {
@@ -148,6 +169,10 @@
   .logo-image {
     width: 60%;
   }
+  .headers {
+    margin-top: 0;
+    margin-left: 0;
+  }
 
   #header {
     font-size: 3rem;
@@ -163,14 +188,17 @@
 
 @media screen and (max-width: 414px) {
   .logo-image {
-    width: 70%;
+    width: 45%;
   }
 
   #header {
     font-size: 2.3rem;
   }
   #header_2 {
-    font-size: 2rem;
+    font-size: 1.8rem;
+  }
+  #header_3 {
+    font-size: 1.8rem;
   }
   .helplineImage {
     width: 85%;
