--- a/src/constants/Global.css
+++ b/src/constants/Global.css
@@ -1,10 +1,11 @@
 .logo {
-  margin-top: 5rem;
+  margin-top: 7rem;
   width: 100%;
+  margin-left: 5rem;
 }
 
 .logo-image {
-  width: 60%;
+  width: 120%;
 }
 
 .headers {
@@ -40,17 +41,18 @@
   margin: 5rem 0 1rem 0;
 }
 #header_3 {
-  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-  font-size: 3rem;
+  /* font-family: Helvetica Neue, Helvetica, Arial, sans-serif; */
+  font-size: 3.5rem;
   font-weight: 500;
-  letter-spacing: 2px;
+  letter-spacing: 1px;
   text-align: center;
   color: #f35626;
   background-image: -webkit-linear-gradient(92deg, #f35626, #feab3a);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   -webkit-animation: hue 10s infinite linear;
-  margin: 0 0 1rem 0;
+  margin-top: 5.2rem;
+  margin-left: 4rem;
 }
 @keyframes hue {
   from {
@@ -146,12 +148,22 @@
 }
 
 @media (max-width: 1024px) {
+  .logo {
+    margin-top: 7rem;
+    width: 100%;
+    margin-left: 5rem;
+  }
+
   .logo-image {
-    width: 60%;
+    width: 100%;
   }
 
   .headers {
-    margin-left: -2rem;
+    margin-left: -5rem;
+  }
+  #header_3 {
+    font-size: 3rem;
+    margin-top: 4.5rem;
   }
 
   #header {
@@ -160,18 +172,29 @@
   #header_2 {
     font-size: 4rem;
   }
+
   .helplineImage {
     width: 75%;
     height: 80%;
   }
 }
 @media (max-width: 768px) {
-  .logo-image {
-    width: 60%;
+  .logo {
+    margin-top: 7rem;
+    width: 100%;
+    margin-left: 5rem;
   }
+
+  .logo-image {
+    width: 90%;
+  }
+
   .headers {
-    margin-top: 0;
-    margin-left: 0;
+    margin-left: -5rem;
+  }
+  #header_3 {
+    font-size: 2.5rem;
+    margin-top: 4.3rem;
   }
 
   #header {
@@ -187,8 +210,23 @@
 }
 
 @media screen and (max-width: 414px) {
+  .logo {
+    margin-top: 7rem;
+    width: 100%;
+    margin-left: 0;
+  }
+
   .logo-image {
-    width: 45%;
+    width: 80%;
+  }
+
+  .headers {
+    margin-top: 0;
+    margin-left: -1rem;
+  }
+  #header_3 {
+    font-size: 3rem;
+    margin-top: 1rem;
   }
 
   #header {
