--- a/src/constants/Global.css
+++ b/src/constants/Global.css
@@ -208,6 +208,22 @@
     height: 80%;
   }
 }
+@media screen and (max-width: 600px) {
+  .logo {
+    margin-top: 7rem;
+    width: 100%;
+    margin-left: 0;
+  }
+
+  .logo-image {
+    width: 80%;
+  }
+
+  .headers {
+    margin-top: -3rem;
+    margin-left: -1rem;
+  }
+}
 
 @media screen and (max-width: 414px) {
   .logo {
