--- a/src/constants/Global.css
+++ b/src/constants/Global.css
@@ -14,6 +14,13 @@
   margin-left: -5rem;
 }
 
+#lastUpdated {
+  text-align: center;
+  letter-spacing: 2px;
+  font-weight: 700;
+  color: #858f87;
+}
+
 #header {
   font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
   font-size: 5.3rem;
@@ -257,5 +264,9 @@
   .helplineImage {
     width: 85%;
     height: 85%;
+  }
+  #lastUpdated {
+    font-size: 12px;
+    font-weight: bold;
   }
 }
